--- a/src/material-icon.directive.scss
+++ b/src/material-icon.directive.scss
@@ -1,7 +1,8 @@
+$base: "~material-design-icons/iconfont";
 @font-face {
-  font-family: 'Material Icons';
+  font-family: "Material Icons";
   font-style: normal;
-  font-weight: 400;
+  font-weight: normal;
   src: url("#{$font-path}/MaterialIcons-Regular.eot"); /* For IE6-8 */
   src: local('#{$font-path}/Material Icons'),
   local('#{$font-path}/MaterialIcons-Regular'),
@@ -11,7 +12,7 @@
 }
 
 ion-icon[md-name] {
-  font-family: 'Material Icons';
+  font-family: "Material Icons";
   text-transform: none;
   letter-spacing: normal;
   word-wrap: normal;
@@ -29,7 +30,7 @@ ion-icon[md-name] {
   -moz-osx-font-smoothing: grayscale;
 
   /* Support for IE. */
-  font-feature-settings: 'liga';
+  font-feature-settings: "liga";
 }
 
 ion-icon[md-name][item-left], ion-icon[md-name][item-right] {
