--- a/src/material-icon.directive.scss
+++ b/src/material-icon.directive.scss
@@ -12,7 +12,7 @@
 
 [md-name] {
   direction: ltr;
-  font-family: 'Material Icons';
+  font-family: 'Material Icons', serif;
   // /* Support for IE. */
   font-feature-settings: 'liga';
   // /* Support for Firefox. */
